fixed white space

--- a/client/src/screens/Dogs/Dogs.css
+++ b/client/src/screens/Dogs/Dogs.css
@@ -8,7 +8,7 @@
   padding: 15px 15px;
   overflow-y: scroll;
   height: 450px;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
 }
 .each-dog {
   border-radius: 25px;
